--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                 </div>
                 <div class="d1-right">
                     <div class="d1-imagem">
-                        <img src="imagens/boneco-hulk.png" alt="" />
+                        <img src="https://user-images.githubusercontent.com/91640492/159368403-6d028f61-c96a-4d28-bdc2-db41589a2724.png" alt="" />
                         Vereador
                     </div>
                     <div class="d1-imagem small">
